RATIS-2129. Low replication performance because of lock contention on RaftLog (#1322)
Co-authored-by: Tsz-Wo Nicholas Sze <szetszwo@apache.org>